sas-core/main/default/objects/IRR_EventLog__c/IRR_EventLog__c.object-meta.xml
<CustomObject>
    <label>Event Log</label>
    <nameField>
        <displayFormat>ELOG-{00000000}</displayFormat>
        <label>Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>