sas-core/main/default/objects/IRR_EventLog__c/fields/Event_Payload_2__c.field-meta.xml
<CustomField>
    <fullName>Event_Payload_2__c</fullName>
    <label>Event Payload 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>