sas-core/main/default/objects/IRR_EventLog__c/fields/IRR_Delayed_Minutes__c.field-meta.xml
<CustomField>
    <fullName>IRR_Delayed_Minutes__c</fullName>
    <label>Delayed Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>