sas-core/main/default/objects/IRR_EventLog__c/fields/IRR_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>IRR_Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICOUPON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>