sas-core/main/default/objects/IRR_EventLog__c/fields/IRR_EventPayload__c.field-meta.xml
<CustomField>
    <fullName>IRR_EventPayload__c</fullName>
    <label>Event Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>