sas-core/main/default/objects/IRR_EventLog__c/fields/IRR_EventTime__c.field-meta.xml
<CustomField>
    <fullName>IRR_EventTime__c</fullName>
    <label>Event Time</label>
    <type>DateTime</type>
</CustomField>