sas-core/main/default/objects/IRR_EventLog__c/fields/IRR_Flight_Ref__c.field-meta.xml
<CustomField>
    <fullName>IRR_Flight_Ref__c</fullName>
    <label>Flight Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>