sas-core/main/default/objects/IRR_EventLog__c/fields/IRR_MessageContent__c.field-meta.xml
<CustomField>
    <fullName>IRR_MessageContent__c</fullName>
    <label>Message Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>