sas-core/main/default/objects/IRR_EventLog__c/fields/IRR_ScheduleTime__c.field-meta.xml
<CustomField>
    <fullName>IRR_ScheduleTime__c</fullName>
    <label>Schedule Time</label>
    <type>DateTime</type>
</CustomField>