sas-core/main/default/objects/IRR_EventLog__c/fields/IRR_Station_Departure__c.field-meta.xml
<CustomField>
    <fullName>IRR_Station_Departure__c</fullName>
    <label>Station Departure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>