sas-core/main/default/objects/IRR_EventLog__c/fields/MinuteDiff__c.field-meta.xml
<CustomField>
    <fullName>MinuteDiff__c</fullName>
    <formula>( IRR_ScheduleTime__c -  NOW() )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MinuteDiff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>